@@ -535,6 +535,193 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testNoDeliver
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|_project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.dep.file"
+argument_list|,
+literal|"test/java/fr/jayasoft/ivy/ant/ivy-latest.xml"
+argument_list|)
+expr_stmt|;
+name|IvyResolve
+name|res
+init|=
+operator|new
+name|IvyResolve
+argument_list|()
+decl_stmt|;
+name|res
+operator|.
+name|setProject
+argument_list|(
+name|_project
+argument_list|)
+expr_stmt|;
+name|res
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|_publish
+operator|.
+name|setPubrevision
+argument_list|(
+literal|"1.3"
+argument_list|)
+expr_stmt|;
+name|_publish
+operator|.
+name|setResolver
+argument_list|(
+literal|"1"
+argument_list|)
+expr_stmt|;
+name|_publish
+operator|.
+name|setSrcivypattern
+argument_list|(
+literal|"build/test/publish/ivy-1.3.xml"
+argument_list|)
+expr_stmt|;
+name|FileUtil
+operator|.
+name|copy
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/fr/jayasoft/ivy/ant/ivy-latest.xml"
+argument_list|)
+argument_list|,
+operator|new
+name|File
+argument_list|(
+literal|"build/test/publish/ivy-1.3.xml"
+argument_list|)
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|File
+name|art
+init|=
+operator|new
+name|File
+argument_list|(
+literal|"build/test/publish/resolve-latest-1.3.jar"
+argument_list|)
+decl_stmt|;
+name|FileUtil
+operator|.
+name|copy
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org1/mod1.1/jars/mod1.1-1.0.jar"
+argument_list|)
+argument_list|,
+name|art
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|_publish
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+comment|// should have published the files with "1" resolver
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/jayasoft/resolve-latest/ivys/ivy-1.3.xml"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/jayasoft/resolve-latest/jars/resolve-latest-1.3.jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// should not have updated published ivy version
+name|ModuleDescriptor
+name|md
+init|=
+name|XmlModuleDescriptorParser
+operator|.
+name|parseDescriptor
+argument_list|(
+operator|new
+name|Ivy
+argument_list|()
+argument_list|,
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/jayasoft/resolve-latest/ivys/ivy-1.3.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"1.0"
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// should not have done delivery (replace dynamic revisions with static ones)
+name|assertEquals
+argument_list|(
+literal|"latest.integration"
+argument_list|,
+name|md
+operator|.
+name|getDependencies
+argument_list|()
+index|[
+literal|0
+index|]
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testReadonly
 parameter_list|()
 throws|throws
